Commit minor changes -> Flask file dev

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Microblog</title>
-    <link rel="stylesheet" href="./static/style.css">
+    <link rel="stylesheet" href="./static/style.css"/>
   </head>
   <body>
     <header class="navbar">
@@ -26,7 +25,7 @@
         <h1>Add new posts</h1>
         <form class="form" method="POST">
           <p class = "form__input">
-          <label for="entry" class="form__label" arira-label="Entry Contents">Entry Contents</label>
+          <label for="entry" class="form__label">Entry Contents</label>
           <textarea name="content" id="entry" class="form__textarea"></textarea>
           </p>
           <button type="submit" class="form__submit">Add Entry</button>
