--- a/templates/home.html
+++ b/templates/home.html
@@ -1,67 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Microblog</title>
-    <link rel="stylesheet" href="./static/style.css"/>
-  </head>
-  <body>
-    <header class="navbar">
-      <div class="navbar__brand>">
-      <img class = "navbar__logo" src = "./static/logo.svg" alt="The Microblog logo"/> Microblog
-      </div>
-      <ul class="navbar__navigation">
-        <li class="navbar__navigation-item">
-          <a href="#" class="navbar__link">Recent</a>
-        </li>
-        <li class="navbar__navigation-item">
-          <a href="#" class="navbar__link">Calendar</a>
-        </li>
-      </ul>
-    </header>
-    <main class="main">
-    <section>
-        <h1>Add new posts</h1>
-        <form class="form" method="POST">
-          <p class = "form__input">
-          <label for="entry" class="form__label">Entry Contents</label>
-          <textarea name="content" id="entry" class="form__textarea"></textarea>
-          </p>
-          <button type="submit" class="form__submit">Add Entry</button>
-        </form>
-    </section>
-    <section>
-        <h1>Recent posts</h1>
-    <article class="entry">
-    <div>
-        <h2 class="entry__title">A bit of chill day today</h2>
-        <time class="entry__date" datetime="02-11-2023"> # Nov 2</time>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Microblog</title>
+  <link rel="stylesheet" href="/static/style.css" />
+</head>
+<body>
+  <header class="navbar">
+    <div class="navbar__brand">
+      <img class="navbar__logo" src="/static/logo.svg" alt="The Microblog logo" />Microblog
     </div>
-    <p class="entry__content">
-        Today, it was a sad day overall - just like rest of them.
-    </p>
-  </article>
-</section>
-</main>
-<footer class="footer">
-  <div class="footer__content">
-    <seciton class="left">
-        <a class="footer__item">Recent</a>
-        <a class="footer__item">Calendar</a>
+    <ul class="navbar__navigation">
+      <li class="navbar__navigation-item">
+        <a href="#" class="navbar__link">Recent</a>
+      </li>
+      <li class="navbar__navigation-item">
+        <a href="#" class="navbar__link">Calendar</a>
+      </li>
+    </ul>
+  </header>
+  <main class="main">
+    <section>
+      <h1>Add new entry</h1>
+      <form class="form" method="POST">
+        <p class="form__input">
+          <label for="entry" class="form__label">Entry contents:</label>
+          <textarea name="content" id="entry" class="form__textarea"></textarea>
+        </p>
+        <button type="submit" class="form__submit">Add entry</button>
+      </form>
     </section>
-    <seciton class="right">
-      <div class="footer__column">
-        <a class="footer__item">About us</a>
-        <a class="footer__item">How was this made</a>
-      </div>
-      <div class="footer__column">
-        <a class="footer__item">Some text</a>
-        <a class="footer__item">Something more</a>
-      </div>  
+    <section>
+      <h1>Recent posts</h1>
+      {% for entry in entries %}
+        <article class="entry">
+          <div>
+            <h2 class="entry__title">{{ entry[0] | truncate(30, true) }}</h2>
+            <time class="entry__date" datetime="{{ entry[1] }}">• {{ entry[2] }}</time>
+          </div>
+          <p class="entry__content">
+            {{ entry[0] }}
+          </p>
+        </article>
+      {% endfor %}
     </section>
-  </div>
-</footer>
-	<!--<script src="index.js"></script> -->
-  </body>
+  </main>
+  <footer class="footer">
+    <div class="footer__content">
+      <section class="left">
+        <a class="footer__item">Made by Jose Salvatierra</a>
+        <a class="footer__item">Check out my other projects</a>
+      </section>
+      <section class="right">
+        <div class="footer__column">
+          <a class="footer__item">Recent</a>
+          <a class="footer__item">Calendar</a>
+        </div>
+        <div class="footer__column">
+          <a class="footer__item" href="#">About</a>
+          <a class="footer__item">How this was made</a>
+        </div>
+      </section>
+    </div>
+  </footer>
+</body>
 </html>
